--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jonathan Tan",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.0",
